# spit-haskell-rules

./: README.md  spit-haskell-rules.cabal
app/: Main.hs
data/: BUILD.mustache  WORKSPACE.mustache  module.mustache
